--- a/day6/www/index.html
+++ b/day6/www/index.html
@@ -39,5 +39,47 @@
         </form>
     </div>
     <hr>
+    <div>
+        <form id='ajax-form' >
+            <!-- Content-Type : application/x-www-form-urlencoded   -->
+            <h3> ajax 방식 </h3>
+            <div>
+                <label for="name" >name : </label>
+                <input name="name" id="name" >
+            </div>
+            <div>
+                <label for="age" >age : </label>
+                <input name="age" id="age" >
+            </div>
+            <button >제출하기</button>
+        </form>
+        <div id='result'></div>
+    </div>
+    <hr>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+
+        document.querySelector('#ajax-form button').addEventListener('click',async (evt)=> {
+            console.log(evt)
+            evt.preventDefault() //리다이랙트 금지 
+            let _form = document.querySelector('#ajax-form')
+            console.log(_form.name.value,_form.age.value)
+
+            let {status,data} = await axios.post('http://localhost:8080/api/v2/addUser',
+            {
+                name : _form.name.value,
+                age : parseInt(_form.age.value)
+            }
+            );
+            if(status == 200) {
+                console.log(data)
+                let result_item = document.createElement('h5')
+                result_item.innerText = `name:${data.name} , age :${data.age}`
+                document.querySelector('#result').appendChild(result_item)
+            }
+        })
+
+    </script>
 </body>
 </html>
